# HKCW-Engine2

./: .gitignore  BUILD_INFO.md  FINAL_SUMMARY.md  GITHUB_PUBLISHED.md  OPTIMIZATION_GUIDE.md  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  PUSH_TO_GITHUB.bat  QUICK_START.md  README.md  README_CN.md  TECHNICAL_NOTES.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md  build_and_run.bat  pubspec.yaml  run_example.bat  setup_webview2.bat  test_api.html  test_iframe_ads.html
docs/: API_BRIDGE.md  DYNAMIC_CONTENT_SOLUTION.md  GITHUB_SETUP.md  IFRAME_AD_SOLUTION.md  IFRAME_IMPLEMENTATION_COMPLETE.md  IFRAME_NAVIGATION_FIX.md  OPTIMIZATION_COMPLETED.md  OPTIMIZATION_TEST_RESULTS.md  PERFORMANCE_ANALYSIS.md  README.md  SOLUTION_SUMMARY.md
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  flutter_window.cpp  main.cpp  resource.h  utils.cpp  win32_window.cpp  win32_window.h
lib/: hkcw_engine2.dart
scripts/: build_and_run.bat  run_example.bat  setup_webview2.bat
windows/: CMakeLists.txt  hkcw_engine2_plugin.cpp  hkcw_engine2_plugin.h  hkcw_sdk.js  packages.config
windows/include/hkcw_engine2/: hkcw_engine2_plugin.h  hkcw_engine2_plugin_c_api.h
